# SplitStreaming

./: .gitignore  CMakeLists.txt  README.md  main.cpp  makefile  venmo.py
include/: ReqPayUser.hpp  StreamingService.hpp  UserDatabase.hpp  superuser.hpp  user.hpp
main/: CMakeLists.txt
src/: CMakeLists.txt  StreamingService.cpp  UserDatabase.cpp  user.cpp
